# libkari

./: CMakeLists.txt  README.md
include/kari/: core.hpp  luabridge.hpp  rectangle.hpp  service.hpp
resources/services/: pomfse.lua
src/: core.cpp  luabridge.cpp  rectangle.cpp  service.cpp
